# pathmerge

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
src/: main.rs  pathmerge.rs
